Changed import of load_entity to load_place to reflect new function names.

--- a/tests/_testing.py.template
+++ b/tests/_testing.py.template
@@ -9,7 +9,7 @@ TEST_PACKAGE = "Products.%s.tests" % PRODUCT_NAME
 TEST_HOME = os.path.sep.join([ROOT, 'Products', PRODUCT_NAME, 'tests'])
 TEST_DATA = os.path.sep.join([TEST_HOME, 'data'])
 
-from Products.PleiadesEntity.Extensions.batching import load_entity, loaden
+from Products.PleiadesEntity.Extensions.batching import load_place, loaden
 from Products.PleiadesEntity.Extensions.batching import format_listofstrings
 from Products.PleiadesEntity.Extensions.xmlutil import purifyText
 from Products.PleiadesEntity.Extensions.cooking import setGeoTitleFromNames
