--- a/tests/_testing.py.template
+++ b/tests/_testing.py.template
@@ -10,7 +10,7 @@ TEST_HOME = os.path.sep.join([ROOT, 'Products', PRODUCT_NAME, 'tests'])
 TEST_DATA = os.path.sep.join([TEST_HOME, 'data'])
 
 from Products.PleiadesEntity.Extensions.loader import load_place, loaden
-from Products.PleiadesEntity.Extensions.batching import format_listofstrings
+from Products.PleiadesEntity.Extensions.loader import format_listofstrings
 from Products.PleiadesEntity.Extensions.xmlutil import purifyText
 from Products.PleiadesEntity.Extensions.cooking import setGeoTitleFromNames
 
