--- a/tests/_testing.py.template
+++ b/tests/_testing.py.template
@@ -11,6 +11,7 @@ TEST_DATA = os.path.sep.join([TEST_HOME, 'data'])
 
 from Products.PleiadesEntity.Extensions.loader import load_place, loaden
 from Products.PleiadesEntity.Extensions.loader import format_listofstrings
+from Products.PleiadesEntity.Extensions.loader import BA_ID_MAX
 from Products.PleiadesEntity.Extensions.xmlutil import purifyText
 from Products.PleiadesEntity.Extensions.cooking import setGeoTitleFromNames
 
